--- a/ferticonnectmedecin-cabine.html
+++ b/ferticonnectmedecin-cabine.html
@@ -23,7 +23,7 @@
     <div class="navigationbar">
         <div class="log">
             <div class="logonav">
-                <img src="img/ferticonnectiLogoGreen.png" alt="">
+                <img src="img/ferticonnectiLogoGreen.svg" alt="">
             </div>
             <h1> FertiConnect</h1>
         </div>
@@ -40,7 +40,7 @@
 
         <div class="leftespace" id="leftespace">
             <div class="couvertureCabine">
-                <img id="couvertureCabine" src="img/ferticonnectiLogoWhite.png" alt="">
+                <img id="couvertureCabine" src="img/ferticonnectiLogoWhite.svg" alt="">
             </div>
             <h1 id="nameCabinetitre"></h1>
             <p id="numberofMembre"></p>
@@ -50,7 +50,7 @@
 
             <div class="profilinfobg" id="profilinfobg">
                 <div class="photoprofilepubadd1">
-                    <img id="photoprofilepubadd1" src="img/ferticonnectiLogoWhite.png" alt="">
+                    <img id="photoprofilepubadd1" src="img/ferticonnectiLogoWhite.svg" alt="">
                 </div>
                 <h1 id="nameUser_connect"></h1>
                 <div class="verifica" id="veri_acco" style="display: none;">
@@ -93,7 +93,7 @@
             <div class="addpublication" id="addpublication" style="display: none;">
                 <div class="addpublication1">
                     <div class="photoprofilepubadd">
-                        <img id="photoprofilepubadd" src="img/ferticonnectiLogoWhite.png" alt="">
+                        <img id="photoprofilepubadd" src="img/ferticonnectiLogoWhite.svg" alt="">
                     </div>
                     <textarea class="inputpubadd" id="inputpubadd" rows="1" cols="50" placeholder="Quoi de neuf ?"></textarea>
                 </div>
@@ -226,7 +226,7 @@
                 <div class="comment_listeComments_bg">
                     <div class="hedercomment">
                         <div class="hedercomment_img">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
+                            <img src="img/ferticonnectiLogoWhite.svg" alt="">
                         </div>
                         <h1 id="name_comment_user"> </h1>
                         <i></i>
@@ -239,7 +239,7 @@
             <div class="addcommentaire_bg">
                 <div class="addpublication1">
                     <div class="photoprofilepubadd comment">
-                        <img id="photoprofilepubadd_comments" src="img/ferticonnectiLogoWhite.png" alt="">
+                        <img id="photoprofilepubadd_comments" src="img/ferticonnectiLogoWhite.svg" alt="">
                     </div>
                     <textarea class="inputpubadd" id="inputpubadd_comment" rows="1" cols="50" placeholder="Ajouter un commentaire ?"></textarea>
                     <i class="bi bi-send" id="send_comment"></i>
@@ -249,7 +249,7 @@
     </div>
     <div class="wating" id="wating" style="display: none;">
         <div class="wating_img">
-            <img src="/img/ferticonnectiLogoGreen.png" alt="">
+            <img src="/img/ferticonnectiLogoGreen.svg" alt="">
         </div>
     </div>
 
@@ -277,7 +277,7 @@
                 <div class="comment_listeComments_bg">
                     <div class="hedercomment">
                         <div class="hedercomment_img">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
+                            <img src="img/ferticonnectiLogoWhite.svg" alt="">
                         </div>
                         <h1 id="name_comment_user"> </h1>
                         <i></i>
@@ -290,7 +290,7 @@
             <div class="addcommentaire_bg">
                 <div class="addpublication1">
                     <div class="photoprofilepubadd comment">
-                        <img id="photoprofilepubadd_comments" src="img/ferticonnectiLogoWhite.png" alt="">
+                        <img id="photoprofilepubadd_comments" src="img/ferticonnectiLogoWhite.svg" alt="">
                     </div>
                     <textarea class="inputpubadd" id="inputpubadd_comment" rows="1" cols="50" placeholder="Ajouter un commentaire ?"></textarea>
                     <i class="bi bi-send" id="send_comment"></i>
