--- a/ferticonnectmedecin-home.html
+++ b/ferticonnectmedecin-home.html
@@ -24,7 +24,7 @@
     <div class="navigationbar">
         <div class="log">
             <div class="logonav">
-                <img src="img/ferticonnectiLogoGreen.png" alt="">
+                <img src="img/ferticonnectiLogoGreen.svg" alt="">
             </div>
             <h1> FertiConnect</h1>
         </div>
@@ -42,7 +42,7 @@
         <div class="leftespace" id="leftespace">
             <div class="profilinfobg" id="profilinfobg">
                 <div class="photoprofilepubadd1">
-                    <img id="photoprofilepubadd1" src="img/ferticonnectiLogoWhite.png" alt="">
+                    <img id="photoprofilepubadd1" src="img/ferticonnectiLogoWhite.svg" alt="">
                 </div>
                 <h1 id="nameUser_connect"></h1>
                 <div class="verifica" id="veri_acco" style="display: none;">
@@ -86,7 +86,7 @@
             <div class="addpublication">
                 <div class="addpublication1">
                     <div class="photoprofilepubadd">
-                        <img id="photoprofilepubadd" src="img/ferticonnectiLogoWhite.png" alt="">
+                        <img id="photoprofilepubadd" src="img/ferticonnectiLogoWhite.svg" alt="">
                     </div>
                     <textarea class="inputpubadd" id="inputpubadd" rows="1" cols="50" placeholder="Quoi de neuf ?"></textarea>
                 </div>
@@ -220,7 +220,7 @@
             <div class="listemesagebg" id="listemesagebg" > 
                 <div class="title_listemesagebg">
                     <div class="image_title_listemesagebg">
-                        <img src="img/ferticonnectiLogoWhite.png" alt="">
+                        <img src="img/ferticonnectiLogoWhite.svg" alt="">
                     </div>
                     <h1>FertiConnect messagerie</h1>
                 </div>
@@ -255,7 +255,7 @@
                 <div class="comment_listeComments_bg">
                     <div class="hedercomment">
                         <div class="hedercomment_img">
-                            <img src="img/ferticonnectiLogoWhite.png" alt="">
+                            <img src="img/ferticonnectiLogoWhite.svg" alt="">
                         </div>
                         <h1 id="name_comment_user"> </h1>
                         <i></i>
@@ -268,7 +268,7 @@
             <div class="addcommentaire_bg">
                 <div class="addpublication1">
                     <div class="photoprofilepubadd comment">
-                        <img id="photoprofilepubadd_comments" src="img/ferticonnectiLogoWhite.png" alt="">
+                        <img id="photoprofilepubadd_comments" src="img/ferticonnectiLogoWhite.svg" alt="">
                     </div>
                     <textarea class="inputpubadd" id="inputpubadd_comment" rows="1" cols="50" placeholder="Ajouter un commentaire ?"></textarea>
                     <i class="bi bi-send" id="send_comment"></i>
@@ -315,12 +315,13 @@
 
         </div>
     </div>
+
     <div class="wating" id="wating" style="display: none;">
         <div class="wating_img">
-            <img src="/img/ferticonnectiLogoGreen.png" alt="">
+            <img src="/img/ferticonnectiLogoGreen.svg" alt="">
         </div>
     </div>
-
+    
     <div class="photoprofilchangerbg" id="deconnectionbg" style="display: none;">
         <div class="deconnection">
             <p>Souhaites-tu te déconnecter ?</p>
