--- a/ferticonnectmedecin-profilepage.html
+++ b/ferticonnectmedecin-profilepage.html
@@ -25,7 +25,7 @@
     <div class="navigationbar">
         <div class="log" id="log">
             <div class="logonav">
-                <img src="img/ferticonnectiLogoGreen.png" alt="">
+                <img src="img/ferticonnectiLogoGreen.svg" alt="">
             </div>
             <h1> FertiConnect</h1>
         </div>
@@ -44,9 +44,9 @@
     
     <div class="profileBg">
         <div class="photoprophletcouverture" >
-            <img id="photocouverture" src="img/ferticonnectiLogoWhite.png" alt="">
+            <img id="photocouverture" src="img/ferticonnectiLogoWhite.svg" alt="">
             <div class="photoprofile" >
-                <img id="photoprofile" src="img/ferticonnectiLogoGreen.png" alt="">
+                <img id="photoprofile" src="img/ferticonnectiLogoGreen.svg" alt="">
             </div>
         </div>
         <div class="nomeUtulisateur">
@@ -72,6 +72,12 @@
             <p id="etap2">Ajoutez une photo de profil.</p>
             <p id="etap3">Ajoutez une photo de couverture.</p>
             <p id="etap4">Remplissez le formulaire.</p>
+            <div class="ligne_"></div>
+
+            <div class="idCopied" id="idCopied" style="display: none;">
+                <p id="iduser_for_copy"></p>
+                <i class="bi bi-copy"></i>
+            </div>
         </div>  
         <br>
         <div class="mycabinsbg" id="mycabinsbg2"  style="height: auto; display: none;">
@@ -182,7 +188,7 @@
 
 <div class="wating" id="wating" style="display: none;">
     <div class="wating_img">
-        <img src="img/ferticonnectiLogoGreen.png" alt="">
+        <img src="img/ferticonnectiLogoGreen.svg" alt="">
     </div>
 
 </div>
