--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                 <h1>FertiConnect</h1>
             </div>
             <div class="imagelogo" id="imagelogo">
-                <img src="img/ferticonnectiLogoGreen.png" alt="">
+                <img src="img/ferticonnectiLogoGreen.svg" alt="">
             </div>
             <div class="bg_choix_user" id="bg_choix_user">
 
                 <div class="bgmedcinpatient" id="medcinclick">
                     <div class="img_bgmedcinpatient">
                         <i id="loadingi1" class="bi bi-journal-medical"></i> 
-                        <img id="loadinglogo1" src="img/ferticonnectiLogoGreen.png" style="display: none;"  alt="" ic>                  
+                        <img id="loadinglogo1" src="img/ferticonnectiLogoGreen.svg" style="display: none;"  alt="" ic>                  
                     </div>
                     <h1>Bienvenue Médecin</h1>
                     <p>Accédez à votre espace médical en vous connectant en tant que médecin.</p>
@@ -43,7 +43,7 @@
                 <div class="bgmedcinpatient" id="patientclick">
                     <div class="img_bgmedcinpatient">
                         <i id="loadingi2" class="bi bi-person-heart"></i>
-                        <img id="loadinglogo2" src="img/ferticonnectiLogoGreen.png"  style="display: none;" alt="" ic>                  
+                        <img id="loadinglogo2" src="img/ferticonnectiLogoGreen.svg"  style="display: none;" alt="" ic>                  
                     </div>
                     <h1>Bienvenue Utilisateur</h1>
                     <p>Accédez à votre espace médical en vous connectant en tant qu'utilisateur.</p>
