--- a/presentationFerticonnect.html
+++ b/presentationFerticonnect.html
@@ -27,7 +27,7 @@
                 <h1>FertiConnect</h1>
             </div>
             <div class="imagelogo" id="imagelogo">
-                <img src="img/ferticonnectiLogoGreen.png" alt="">
+                <img src="img/ferticonnectiLogoGreen.svg" alt="">
             </div>
             <div class="prsentation">
                 <p> </p>
