--- a/ferticonnectmedecin-login.html
+++ b/ferticonnectmedecin-login.html
@@ -23,7 +23,7 @@
     <div class="bg_login_register">
         <div class="contet_bg">
             <div class="image_L_R">
-                <img src="img/ferticonnectiLogoGreen.png" alt="">
+                <img src="img/ferticonnectiLogoGreen.svg" alt="">
                 <p>Bienvenue sur</p>
                 <h1> FertiConnect</h1>
                 <p id="p_image_L_R">connecttez vous avect votre copmt </p>
@@ -40,7 +40,7 @@
             <div class="content_L_R">
                 <div class="logo_ferti">
                     <div class="logo_ferti_rond">
-                        <img src="img/ferticonnectiLogoGreen.png" alt="">
+                        <img src="img/ferticonnectiLogoGreen.svg" alt="">
                     </div>
                     <br>
                     <h2 id="titreindex"></h2>
@@ -154,7 +154,7 @@
 
     <div class="wating" id="wating" style="display: none;">
         <div class="wating_img">
-            <img src="/img/ferticonnectiLogoGreen.png" alt="">
+            <img src="/img/ferticonnectiLogoGreen.svg" alt="">
         </div>
 
     </div>
