--- a/formulairepatien.html
+++ b/formulairepatien.html
@@ -412,7 +412,7 @@
       <br>
       <div class="navigation-buttons">
         <button type="button" id="prevStep3">Précédent</button>
-        <button type="submit" id="SoumettreFormulaire">Soumettre</button>
+        <button type="button" id="SoumettreFormulaire">Soumettre</button>
       </div>
 
       <p id="message3" class="message"></p>
