--- a/index.html
+++ b/index.html
@@ -45,21 +45,25 @@
                         <option value="pt">Portugaise</option>
                     </select> 
                     
-
                     <br>
-
                 </div>
                 <div class="text-container" id="containerText">
                     <p id="animated-text"><span id="typed-text"></span></p>
                     <div id="text-bar"></div>
                 </div>
-                <div class="buttonnext" id="buttonnext1" >
+                <div class="buttonnext" id="buttonnext1"  style="display: none;">
                     <button class="btn souvgarder" id="suivant1"></button>
                 </div>
-                <br><br>
-                <p id="tomedcinePage" class="tomedcinePage"></p>
+                <div class="buttonnext" id="buttonnext2" style="display: noen;">
+                    <button class="btn souvgarder" id="suivant2"></button>
+                </div>
+                <div class="buttonnext" id="buttonnext3" style="display: noen;">
+                    <button class="btn souvgarder" id="suivant3"></button>
+                </div>
 
                 
+                <p id="tomedcinePage" class="tomedcinePage"></p>
+
             </div>
         </div>
     </div>
