--- a/ferticonnectmedecin-login.html
+++ b/ferticonnectmedecin-login.html
@@ -24,9 +24,9 @@
         <div class="contet_bg">
             <div class="image_L_R">
                 <img src="img/ferticonnectiLogoGreen.svg" alt="">
-                <p id="text1">Bienvenue sur</p>
-                <h1 id="text2"> FertiConnect</h1>
-                <p id="p_image_L_R">connecttez vous avect votre copmt </p>
+                <p id="text1"></p>
+                <h1 id="text2"> </h1>
+                <p id="p_image_L_R"></p>
                 <div class="img_login" id="med"  style="display: none;">
                     <img src="img/medcinlogin.svg" alt="">
                 </div>
@@ -34,7 +34,7 @@
                     <img src="img/utilisateurlogin.svg" alt="">
                 </div>
                 <br>
-                <button id="retourne" class="btnVide">retourner</button>
+                <button id="retourne" class="btnVide"></button>
 
             </div>
             <div class="content_L_R">
@@ -47,15 +47,15 @@
                 </div>
                 <div class="con_content_L_R" style="display: flex;" id="login_bg">
                     <form id="loginForm" class="conncxion_inputs">
-                        <h1 id="text3">Connectez-vous</h1>
-                        <p id="text4">Bienvenue dans vote espace de FertiConnect</p>
+                        <h1 id="text3"></h1>
+                        <p id="text4"></p>
                         <br>
                         <div class="input_styl">
-                            <label for="email" id="text0">Email:</label>
+                            <label for="email" id="text0"></label>
                             <input type="email" id="loginEmail_medecin" required>
                         </div>
                         <div class="input_styl">
-                            <label for="password" id="text5">Mot de passe:</label>
+                            <label for="password" id="text5"></label>
                             <input type="password" id="loginPassword_medecin" required autocomplete="current-password">
                         </div>
                         <br>
@@ -74,30 +74,30 @@
                             </div>
                       </button>
                       <br>
-                      <p id="text8">J'ai oublié mon mot de passe ,<a href="#" id="recupereMDP"> Récupérer mon compt.</a> </p>
-                      <p id="text9">Je n'ai pas de compte, <a href="#" id="creeCompte">créez un compt.</a></p>
+                      <p><p id="text8"> </p><a href="#" id="recupereMDP"> </a> </p>
+                      <p><p id="text9"></p><a href="#" id="creeCompte"></a></p>
                       <p id="message_firebase_login"></p>
                     </form>
                 </div>
                 <div class="con_content_L_R" style="display: none;" id="register_bg">
                     <form id="registerForm" class="conncxion_inputs">
-                        <h1 id="text10">S'inscrire</h1>
-                        <p id="text11">Bienvenue dans vote espace de FertiConnect</p>
+                        <h1 id="text10"></h1>
+                        <p id="text11"></p>
                         <br>
                         <div class="input_styl">
-                            <label for="nommedin" id="text12">Nom:</label>
+                            <label for="nommedin" id="text12"></label>
                             <input type="text" id="nom_medecin" required>
                         </div>
                         <div class="input_styl">
-                            <label for="registerPrenom_medecin" id="text13">Prénom:</label>
+                            <label for="registerPrenom_medecin" id="text13"></label>
                             <input type="text" id="registerPrenom_medecin" required autocomplete="current-password">
                         </div>
                         <div class="input_styl">
-                            <label for="email" id="text14">Email:</label>
+                            <label for="email" id="text14"></label>
                             <input type="email" id="registerEmail_medecin" required>
                         </div>
                         <div class="input_styl">
-                            <label for="password" id="text15">Mot de passe:</label>
+                            <label for="password" id="text15"></label>
                             <input type="password" id="registerPassword_medecin" required autocomplete="current-password">
                         </div>
                         <br>
@@ -116,22 +116,22 @@
                             </div>
                       </button>
                       <br>
-                      <p id="text18">J'ai un compte, <a href="#" id="connecter">Connectez-vous</a></p>
+                      <p> <p id="text18"></p><a href="#" id="connecter"></a></p>
                       <p id="message_firebase_register"></p>
                     </form>
                 </div>
                 <div class="con_content_L_R" style="display: none;" id="recuperation_bg">
                     <form id="recuperationForm" class="conncxion_inputs">
-                        <h1 id="text19">Récupération de Mot de Passe</h1>
-                        <p id="text20">Entrez votre adresse e-mail ci-dessous. Un lien de réinitialisation de mot de passe vous sera envoyé.</p>
+                        <h1 id="text19"></h1>
+                        <p id="text20"></p>
                         <div class="input_styl">
-                            <label for="email" id="text21">Email:</label>
+                            <label for="email" id="text21"></label>
                             <input type="email" id="recuperationEmail" required>
                         </div>
                         <br>
                       <button class="btn" type="submit">
                             <div id="original2" style="display: block;" >
-                               <p id="text22"></p> Envoyer le lien
+                               <p id="text22"></p> 
                             </div>
                             <div class="cs-loader-inner" id="loader2" style="display: none;">
                                 <label>	●</label>
@@ -144,7 +144,7 @@
                             </div>
                       </button>
                       <br>
-                      <p id="text24">Retour à la page de <a href="#" id="anuulerRecuperation">connexion</a>.</p>
+                      <p> <p id="text24"></p><a href="#" id="anuulerRecuperation"></a>.</p>
                       <p id="message_firebase_recuperation"></p>
                     </form>
                 </div>
