--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
                     <br>
                     <select id="language">
                         <option value="" selected disabled>language</option>
-                        <option value="fr">Français</option>
-                        <option value="en">English</option>
-                        <option value="es">Español</option>
-                        <option value="ar">العربية</option>
-                        <option value="pt">Portugaise</option>
+                        <option value="fr">Français 🇫🇷</option>
+                        <option value="ar">العربية 🇸🇦</option>
+                        <option value="en">English 🇬🇧</option>
+                        <option value="de">Deutsch 🇩🇪</option>
+                        <option value="es">Español 🇪🇸</option>
+                        <option value="pt">Portugais 🇵🇹</option>                        
                     </select> 
                     
                     <br>
