--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
                     <select id="language">
                         <option value="" selected disabled>language</option>
                         <option value="fr">Français 🇫🇷</option>
-                        <option value="ar">العربية 🇸🇦</option>
+                        <option value="ar">العربية 🇩🇿</option>
                         <option value="en">English 🇬🇧</option>
                         <option value="de">Deutsch 🇩🇪</option>
                         <option value="es">Español 🇪🇸</option>
                         <option value="pt">Portugais 🇵🇹</option>                        
                     </select> 
-                    
                     <br>
                 </div>
                 <div class="text-container" id="containerText">
